# XRP-Time-Series-Forecasting

./: 36120-25SP-group17-25548684-AT3-experiment.ipynb  Dockerfile  README.md  github.txt  pyproject.toml  requirements.txt
app/: main.py
students/: ripple_25548684.py
