[project]
name = "36120-25sp-at3-group17-streamlit"
version = "0.1.0"
description = ""
authors = [
    {name = "Siddharth Suresh Nair",email = "sidsuresh@hotmail.com"}
]
readme = "README.md"
requires-python = "3.11.4"
dependencies = [
    "pandas (==2.2.2)",
    "fastapi (==0.111.0)",
    "uvicorn (==0.30.1)",
    "joblib (==1.4.2)",
    "streamlit (==1.36.0)",
    "plotly (>=6.3.1,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
